# django-into

./: README.md  manage.py  pyproject.toml
candy/: tests.py  urls.py  views.py
candy/templates/: about.html  base.html  home.html
candy_site/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_djago_intro.py
